--- a/main.html
+++ b/main.html
@@ -1,31 +1,42 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
+    <title>Карта лояльности Пятёрочка онлайн — скидки до 80%</title>
+    <meta name="description" content="Скидки до 80% с цифровой картой лояльности Пятёрочка. Покажите штрихкод на кассе или отсканируйте для моментальной экономии!">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <!-- icons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/x-png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/x-png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <!-- Open Graph для социальных сетей -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Цифровая карта лояльности Пятёрочка — Скидки до 80%">
+    <meta property="og:description" content="Сканируйте штрихкод прямо с телефона и получайте скидки в Пятёрочке без физической карты.">
+    <meta property="og:image" content="./pic/card.jpg">
+    <!-- <meta property="og:url" content="https://example.com"> -->
 
-    <title>КАРТА ПЯТЕРОЧКИ ОНЛАЙН</title>
+
   </head>
   <body>
 
     
     
-    <h1 class="h1 text-danger text-center">КАРТА ЛОЯЛЬНОСТИ ПЯТЕРОЧКИ:</h1>
+    <h1 class="h1 text-danger text-center">КАРТА ЛОЯЛЬНОСТИ ПЯТЕРОЧКИ</h1>
+    <p class="lead text-center">Не носите с собой пластиковую карту — просто сохраните сайт и показывайте штрихкод прямо с телефона.</p>
     <h2 class="h2 text-center text-secondary">ФОТО ДЛЯ ПОЛУЧЕНИЯ СКИДКИ</h2>
-
     <img 
     class="img1"
     src="./pic/card.jpg"
-    alt="">
+    alt="штрихкод карты лояльности Пятёрочка">
     <h3 class="h2 text-danger text-center">КАК ПОЛУЧИТЬ СКИДКУ?</h3>
-    <p class="short-about text-secondary text-center">Покажите фото штрих-кода кассиру или отсканируйте фото на кассе самообслуживания.</p>
+    <p class="lead text-center">Покажите фото штрих-кода кассиру или отсканируйте фото на кассе самообслуживания.</p>
     <div class="footer">
-    <p class="short-about text-secondary text-center" style="margin-top: 50px;">На данном ресурсе вы найдете изображение штрихкода дисконтной карты сети магазинов «Пятёрочка». Эта карта позволяет получать скидки от 5% до 80% на большую часть товаров. Её можно активировать в любом магазине сети на территории России. Для удобства вы можете сохранить сайт в избранном браузера — это позволит вам быстро применять скидку через скан штрихкода при оплате покупок, даже если физической карты нет под рукой.</p>
+    <p class="lead text-center" style="margin-top: 50px;">На данном ресурсе вы найдете изображение штрихкода дисконтной карты сети магазинов «Пятёрочка». Эта карта позволяет получать скидки от 5% до 80% на большую часть товаров. Её можно активировать в любом магазине сети на территории России. Для удобства вы можете сохранить сайт в избранном браузера — это позволит вам быстро применять скидку через скан штрихкода при оплате покупок, даже если физической карты нет под рукой.</p>
     </div>
     <script src="js/bootstrap.bundle.min.js"></script>
   </body>
