--- a/main.html
+++ b/main.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Карта лояльности Пятёрочка онлайн — скидки до 80%</title>
     <meta name="description" content="Скидки до 80% с цифровой картой лояльности Пятёрочка. Покажите штрихкод на кассе или отсканируйте для моментальной экономии!">
+    <meta name="keywords" content="Пятёрочка карта, карта лояльности, скидки Пятерочка, штрихкод Пятерочка, QR Пятёрочка онлайн">
+    <meta name="robots" content="index, follow">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <!-- icons -->
