redirect and RU target

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="language" content="Russian">
+    <meta name="geo.region" content="RU">
+    <meta name="geo.placename" content="Russia">
+    <link rel="alternate" hreflang="ru" href="https://карта-пятерочки.рф/" />
     <title>Карта лояльности Пятёрочка онлайн — скидки до 80%</title>
     <meta name="description" content="Скидки до 80% с цифровой картой лояльности Пятёрочка. Покажите штрихкод на кассе или отсканируйте для моментальной экономии!">
     <meta name="keywords" content="Пятёрочка карта, карта лояльности, скидки Пятерочка, штрихкод Пятерочка, QR Пятёрочка онлайн">
